virtual threads + synchronized handlers = bad